- Added "phpunit-coverage" build.xml target to work around broken phing/phpunit integration in current versions - Fixed UserRestServiceTest problem resulting in duplicate primary key sql exception
Studio Updates
- Bug fix to ProjectRemote::createORMXML when processing mssql driver attribute 

Backward compatible apidoc: Yes

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@177 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,7 @@
-- Implemented relational stored procedures into PGSQLDialect
-- Added getProcedures, addProcedure and setProcedures methods to Database class.
-- Slight refactoring (polishing) of MySQLDialect::call
-- Added "requestBase" attribute to mvc configuration element in agilephp.xml.
-- Added Component::getParam
-- Bug fix to Form::getForeignKeySelection where the referenced model name was used in lookup rather than orm configured property name
-- Added warning log message in BaseDialect::find when expected foreign key lookup fails
-- Bug fix to BaseDialect::delete when deleting many-to-many relationship where the key is both a primary key and foreign key
-- DomainModel::persist now returns the last insert id
+- Added "phpunit-coverage" build.xml target to work around broken phing/phpunit integration in current versions
+- Fixed UserRestServiceTest problem resulting in duplicate primary key sql exception
 
-* Still need to finish implementing relational stored procedures into MSSQLDialect 
+Studio Updates
+- Bug fix to ProjectRemote::createORMXML when processing mssql driver attribute 
 
 Backward compatible apidoc: Yes
