--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,26 +1,9 @@
-- Added nchar to orm.dtd and studio NewModelRemote class
-- Bug fix to BaseModelXslController::getModelListXSL. In the case of "one-to-many" or
-  "many-to-one" relationships, the generated XSL expected parent model field name(s)
-  to be named after the foreign model class. Now, all values are looked up from orm.xml
-  to ensure proper mapped names are respected.
-- Minor performance enhancements to IdentityManagerFactory.
-- Bug fix to BaseDialect::merge when persisting a foreign key and 'cascade' is null or set to 'none'.
-- Bug fix to BaseModelActionController::setModelValues when submitting "NULL" foreign key values
-  from HTML select submission
-- Refactored XmlRenderer so that child objects are rendered as the parent field name rather than the
-  child class name. This was refactored to support #2 mentioned above.
-- Bug fix to Interception::getPropertyStubs on windows and mac servers
-- Refactored Identity::setOrderBy to allow for optional "direction" parameter. Defaults to ASC now.
-- Added 'transformer' annotation parameter to #@RequestParam.
-- Refactored abstract Validator class to interface. validate() method is now static.
-- Refactored BaseDialect::validate to work with new Validator API.
-- Created ValidationException class and added its file system path to AgilePHP::classmap.
-- Added optional validator parameter to #@RequestParam interceptor
-- Bug fix to #@Restrict interceptor that was introduced when Role entity was refactored to support an "id" field.
-- Added debug logging in RestUtil::consumeTransform to avoid eatting the root cause exception stack before throwing
+- Big fixes to JsonRenderer.
+	- Empty arrays are now rendered as "[]" instead of null.
+	- JSON structure is now created using the actual model structure, instead of using child class name for parent property names.
+- Added additional $params argument to ORM to support MSSQLDialect sqlsrv_query.
+- Bug fix to BaseDialect::delete in the case of a table with multiple primary keys which are also foriegn keys (junction table) 
+- Enhanced Remoting by allowing callbacks to be specified as the last parameter to the remote method call. The 'setCallback' method
+  in the generated javascript stub is still supported.
 
-Studio Updates
-- Added MSSQL nchar support to NewModelRemote. Need to come up with a way to dynamically load data types based on DTD.
-
-Backward compatible apidoc: No
-- Validators are called statically now.
+Backward compatible apidoc: Yes
