- ran unit tests against yesterdays checkin - passing - renamed #@RequestParam to #@FormParam - cleaned up README and TODO files - refactored test/remoting-example.html to use newly supported callback / exception handler syntax - Stripped EmailValidator logic to just check for valid syntax (removed MX and A record check) - Created EmailWithDnsCheckValidator that includes syntax checking as well as DNS MX and A record lookups   to see if the email domain has valid MX and A records.
Backward compatible apidoc: No

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@185 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/README
+++ b/README
@@ -35,7 +35,7 @@ PHP 5.3+
 --------------
 ** Building **
 --------------
-http://confluence.makeabyte.com:8090/display/agilephp/Build+From+Source+-+Ubuntu+10.04
+http://confluence.makeabyte.com:8080/display/agilephp/Build+From+Source+-+Ubuntu+10.04
 
 
 ---------------------
@@ -74,16 +74,20 @@ View the online apidoc at http://makeabyte.com/agilephp/apidoc.
 ----------
 ** WIKI **
 ----------
-Visit the WIKI at http://confluence.makeabyte.com for details on installation, configuration, and tutorials.
+Visit the WIKI at http://confluence.makeabyte.com:8080 for details on installation, configuration, and tutorials.
 
 
 ----------------
 ** Repository **
 ----------------
+Currently offline due to migration - will be back shortly!
+
 Visit the FishEye at http://fisheye.makeabyte.com
 
 
 ------------------
 ** Bug Tracking **
 ------------------
+Currently offline due to migration - will be back shortly!
+
 Visit Jira at http://jira.makeabyte.com. Thanks for helping make AgilePHP better!
