--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,24 +1,9 @@
-- optimized #@Cache key generation
-- AJAXRenderer: added jsmin support
-- JSONRenderer: added jsmin support
-- MSSQLDialect: missing order by and group by in pagination logic
-                fixed missing begin_transaction
-                Switched from ROW_NUMBER() to @@ROWCOUNT to produce expected pagination results.
-- Created util package
-- Created ModelGenerator utility class
-- Created DocBlockParser utility class
-- Refactored Remoting component:
-	o Added registerModel method, which allows a model to be included in stub generation.
-	o Remoting::registerModel accepts an optional parameter, which if present/true, generates
-	  the JavaScript model constructor with native object {} or array [] default values.
-	o Added minify support if jsmin extension is installed
-    o Changed header from application/json to text/javascript
-- Created mailer package
-    o Added support for plain text, HTML, multipart/alternative and multipart/mixed mime types.
-    o Added multiple attachment support
-    o Added email tracking support
-- Bug fix to XmlRenderer::render when inspecting array element that could be an object - assumed index existed
+- ran unit tests against yesterdays checkin - passing
+- renamed #@RequestParam to #@FormParam
+- cleaned up README and TODO files
+- refactored test/remoting-example.html to use newly supported callback / exception handler syntax
+- Stripped EmailValidator logic to just check for valid syntax (removed MX and A record check)
+- Created EmailWithDnsCheckValidator that includes syntax checking as well as DNS MX and A record lookups
+  to see if the email domain has valid MX and A records.
 
-NOTE: This checkin has not been tested yet!
-
-Backward compatible apidoc: Yes
+Backward compatible apidoc: No
