- Checking in missing Interception class refactorings (from 0.39.0 and 0.39.1 builds)   o No longer breaks if missing closing php tag from document (?>)   o Parsing / creating interceptor proxy now includes fields in stub generation
Build released to SourceForge repo as build / version 0.39.2

Backward compatible apidoc: Yes

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@187 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,5 @@
-- Checking in missing upload component refactorings as part of 0.39.0 checkin / release:
-  o Added support for file type restriction
-  o Added support for file size restriction
-  o Other misc enhancements / refactorings 
+- Checking in missing Interception class refactorings (from 0.39.0 and 0.39.1 builds)
+  o No longer breaks if missing closing php tag from document (?>)
+  o Parsing / creating interceptor proxy now includes fields in stub generation
 
-Backward compatible apidoc: No
+Backward compatible apidoc: Yes
