git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@192 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,16 +1,3 @@
-- Refactored Remoting.Parser.isArray to take into account null responses
-- Changed ROW_NUMBER() to @@ROWCOUNT in MSSQLDialect::find
-- Added cleansing logic to XSLTRenderer::transform and transformXsl in an
-  effort to fix common non-XML compliant data formatting issues on the fly.
-- Bug fixes to ModelGenerator. Added ucfirst to ModelGenerator::className. Added
-  toCamelCase for class fields.
-- Bug fix to MSSQLDialect::call; Not passing array parameters by reference.
-- Removed erraneous obj reference in AgilePHP.js getInstance method.
-- Added error code argument to RemotingException class constructor
-- Disabled IdentityMap caching in BaseDialect::get for the time being -- needs
-  further examing to ensure stale data is not being returned. May need cache time on
-  orm column to fix. 
-- Added utf8_encoding to JsonRenderer
-- Bug fix to Mailer - was using implode instead of explode on CC and BCC lists
+Bug fix to Mailer::getCommonHeaders with multiple recipients
 
 Backward compatible apidoc: Yes
