Updated README to reflect new JIRA URL and repository locations
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@193 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/README
+++ b/README
@@ -82,14 +82,11 @@ Visit the WIKI at http://confluence.makeabyte.com:8080 for details on installati
 ----------------
 ** Repository **
 ----------------
-Currently offline due to migration - will be back shortly!
-
-Visit the FishEye at http://fisheye.makeabyte.com
+github      - https://github.com/MakeAByte/AgilePHP
+SourceForge - http://sourceforge.net/projects/agilephp
 
 
 ------------------
 ** Bug Tracking **
 ------------------
-Currently offline due to migration - will be back shortly!
-
-Visit Jira at http://jira.makeabyte.com. Thanks for helping make AgilePHP better!
+Visit Jira at http://jira.makeabyte.com:8083. Thanks for helping make AgilePHP better!
